kubernet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketgo-service             # 🔁 Nom du service (tu peux le garder ou personnaliser)
spec:
  selector:
    app: marketgo                    # 🔁 Doit correspondre au label utilisé dans le Deployment (ok pour toi)
  type: NodePort                     # Permet d’accéder à l’application depuis ton navigateur (localhost)etÇa signifie que ton appli est bien exposée sur un port précis du noeud Minikube, mais pas sur 127.0.0.1.
  ports:
    - protocol: TCP
      port: 80                # Port visible dans le cluster (externe pour les autres services)
      targetPort: 8000              # 🔁 Le port exposé par ton conteneur (doit correspondre à containerPort)
      nodePort: 30080               # 🔁 Port d'accès depuis ton navigateur : http://localhost:30080
